tests/negative/array_var_oob_pluseq_assign.far
fun main() -> i64 {
  a = [1, 2, 3]
  a[3] += 1
  return 0
}
